# Advanced-Computing

./: .gitignore  CMakeLists.txt  calculation.cpp  calculation.h  calculation_test.cpp  main.cpp
HW1/: CMakeLists.txt  README.MD  main.cpp
HW2/: CMakeLists.txt  MarketData.cpp  MarketData.h  README.md  TradeEngine.cpp  TradeEngine.h  main.cpp
HW3/: CMakeLists.txt  TradeHandle.h  main.cpp  part2.cpp  readme.md
HW4/: CMakeLists.txt  OrderBookBuffer.h  StaticVector.h  constexpr_math.h  generic_algorithms.h  main.cpp  metaprogramming.h  readMe.md
HW5/: CMakeLists.txt  README.md  binaryheap.h  hashtable.h  main.cpp  orderbook.h  timeseries.h
Phase1/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h  calculation.cpp  calculation.h  calculation_test.cpp  main.cpp  report.md
Phase2/: CMakeLists.txt  hft_client  hft_client.cpp  hft_server  hft_server.cpp  main.cpp  strategy.md
Phase2/hft_server.dSYM/Contents/: Info.plist
Phase2/hft_server.dSYM/Contents/Resources/DWARF/: hft_server
Phase3/: CMakeLists.txt  README.md  feed_parser.h  logger.h  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  order_manager.h  strategy.cpp  strategy.h
Phase4/: CMakeLists.txt  MarketData.cpp  MarketData.h  MatchingEngine.cpp  MatchingEngine.h  Order.h  OrderBook.cpp  OrderBook.h  OrderManager.cpp  OrderManager.h  Timer.h  TradeLogger.cpp  TradeLogger.h  main.cpp  readME.MD  report.MD  run  test_latency.cpp
Phase5/: .gitignore  CMakeLists.txt  OptimizedOrderBook.cpp  OptimizedOrderBook.h  OrderBook.cpp  OrderBook.h  Timer.cpp  Timer.h  main.cpp  readME.md  report.md  test_accuracy.cpp
